--- a/ansible/files/guschat.service
+++ b/ansible/files/guschat.service
@@ -4,10 +4,10 @@ Requires=network.target
  
 [Service]
 Type=simple
-User=gus
-Group=gus
-WorkingDirectory=/home/gus/guschat
-ExecStart=/home/gus/guschat/bin/rails server --environment=development --binding=0.0.0.0 --port=8080
+User=rails
+Group=rails
+WorkingDirectory=/opt/guschat
+ExecStart=/opt/guschat/bin/rails server --environment=development --binding=0.0.0.0 --port=8080
 TimeoutSec=30
 RestartSec=15s
 Restart=always
