--- a/ansible/files/guschat-nginx.conf
+++ b/ansible/files/guschat-nginx.conf
@@ -1,12 +1,12 @@
 # redirect http to https
 server {
-    listen 80 default_server;
-    listen [::]:80 default_server;
-    server_name _;
+  listen 80 default_server;
+  listen [::]:80 default_server;
+  server_name _;
 
-    location / {
-        return 301 https://$host$request_uri;
-    }
+  location / {
+    return 301 https://bullardisd.net;
+  }
 }
 
 server {
@@ -22,5 +22,9 @@ server {
 
   location /guschat/ {
     proxy_pass http://localhost:8080/;
+  }
+
+  location / {
+    return 301 https://bullardisd.net;
   }
 }
