/guschat authorizes using a cookie

--- a/ansible/files/guschat-nginx.conf
+++ b/ansible/files/guschat-nginx.conf
@@ -20,11 +20,16 @@ server {
   index index.html index.htm index.nginx-debian.html;
   server_name _;
 
-  location /guschat/ {
-    proxy_pass http://localhost:8080/;
+  location /guschat {
+    add_header Set-Cookie "Guschat=authorized";
+    return 301 /;
   }
 
   location / {
-    return 301 https://bullardisd.net;
+    if ($cookie_Guschat !~ 'authorized') {
+      return 301 https://bullardisd.net;
+    }
+    proxy_pass http://localhost:8080/;
   }
+
 }
