--- a/ansible/files/guschat-nginx.conf
+++ b/ansible/files/guschat-nginx.conf
@@ -26,7 +26,7 @@ server {
   }
 
   location / {
-    if ($cookie_Guschat !~ 'authorized') {
+    if ($cookie_Guschat != 'authorized') {
       return 301 https://bullardisd.net;
     }
     proxy_pass http://localhost:8080/;
