--- a/ansible/files/guschat-nginx.conf
+++ b/ansible/files/guschat-nginx.conf
@@ -29,6 +29,15 @@ server {
     if ($cookie_Guschat != 'authorized') {
       return 301 https://bullardisd.net;
     }
+    proxy_set_header Host $http_host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Host $http_host;
+    proxy_set_header X-Forwarded-Port $server_port;
+    proxy_set_header X-Forwarded-Server $host;
+    proxy_set_header X-Forwarded-Ssl on;
+    proxy_set_header X-Forwarded-Proto https;
+    proxy_set_header Origin https://$http_host;
     proxy_pass http://localhost:8080/;
   }
 
