--- a/ansible/files/guschat-nginx.conf
+++ b/ansible/files/guschat-nginx.conf
@@ -38,6 +38,7 @@ server {
     proxy_set_header X-Forwarded-Ssl on;
     proxy_set_header X-Forwarded-Proto https;
     proxy_set_header Origin https://$http_host;
+    proxy_redirect off;
     proxy_pass http://localhost:8080/;
   }
 
