redirecting to sophia learning

--- a/ansible/files/guschat-nginx.conf
+++ b/ansible/files/guschat-nginx.conf
@@ -5,7 +5,7 @@ server {
   server_name _;
 
   location / {
-    return 301 https://bullardisd.net;
+    return 301 https://sophia.org;
   }
 }
 
@@ -27,7 +27,7 @@ server {
 
   location / {
     if ($cookie_Guschat != 'authorized') {
-      return 301 https://bullardisd.net;
+      return 301 https://sophia.org;
     }
     proxy_set_header Host $http_host;
     proxy_set_header X-Real-IP $remote_addr;
