--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -3,7 +3,9 @@
 one:
   username: MyString
   password_digest: MyString
+  color: MyString
 
 two:
   username: MyString
   password_digest: MyString
+  color: MyString
