fixed path name in nginx files and deployment

--- a/ansible/rails-installation.yml
+++ b/ansible/rails-installation.yml
@@ -109,6 +109,13 @@
     tags:
       - nginx
 
+  - name: deploy nginx proxy-pass-nginx file
+    ansible.builtin.copy:
+      src: files/proxy-pass-nginx.conf
+      dest: /etc/nginx/
+    tags:
+      - nginx
+
   - name: restart nginx
     ansible.builtin.systemd_service:
       name: nginx
