proxy_pass needs a directory thing above to append the page to localhost:8080

--- a/ansible/files/guschat-nginx.conf
+++ b/ansible/files/guschat-nginx.conf
@@ -25,7 +25,7 @@ server {
     return 301 /;
   }
 
-  location /messages.xml {
+  location /ReallySimpleSyndication {
     include /etc/nginx/proxy-pass-nginx.conf;
   }
 
