--- a/ansible/files/guschat-nginx.conf
+++ b/ansible/files/guschat-nginx.conf
@@ -25,21 +25,15 @@ server {
     return 301 /;
   }
 
+  location /ReallySimpleSyndication {
+    include /etc/nginx/proxy-pass-nginx.conf;
+  }
+
   location / {
     if ($cookie_Guschat != 'authorized') {
       return 301 https://sophia.org;
     }
-    proxy_set_header Host $http_host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Host $http_host;
-    proxy_set_header X-Forwarded-Port $server_port;
-    proxy_set_header X-Forwarded-Server $host;
-    proxy_set_header X-Forwarded-Ssl on;
-    proxy_set_header X-Forwarded-Proto https;
-    proxy_set_header Origin https://$http_host;
-    proxy_redirect off;
-    proxy_pass http://localhost:8080/;
+    include /etc/nginx/proxy-pass-nginx.conf;
   }
 
 }
