mapped RSS/messages.xml to a boolean to for redirection reference

--- a/ansible/files/guschat-nginx.conf
+++ b/ansible/files/guschat-nginx.conf
@@ -26,6 +26,13 @@ server {
   }
 
   location /ReallySimpleSyndication {
+    map $uri $isxml {
+      ~messages\.xml$ 1;
+      default 0;
+    }
+    if ($isxml = '0') {
+      return 301 https://sophia.org;
+    }
     include /etc/nginx/proxy-pass-nginx.conf;
   }
 
