forgot to set version to xml_uri branch

--- a/ansible/rails-installation.yml
+++ b/ansible/rails-installation.yml
@@ -46,6 +46,7 @@
       dest: "/opt/guschat"
       repo: https://github.com/agustux/guschat.git
       force: true
+      version: "xml_uri"
 
   - name: bundle install
     ansible.builtin.shell:
