fixed map location

--- a/ansible/files/guschat-nginx.conf
+++ b/ansible/files/guschat-nginx.conf
@@ -1,4 +1,8 @@
-# redirect http to https
+map $uri $valid_rss_req {
+  ~messages\.xml$ 1;
+  default 0;
+}
+
 server {
   listen 80 default_server;
   listen [::]:80 default_server;
@@ -26,11 +30,7 @@ server {
   }
 
   location /ReallySimpleSyndication {
-    map $uri $isxml {
-      ~messages\.xml$ 1;
-      default 0;
-    }
-    if ($isxml = '0') {
+    if ($valid_rss_req = '0') {
       return 301 https://sophia.org;
     }
     include /etc/nginx/proxy-pass-nginx.conf;
