fixed bug missing semicolon in guschat-nginx.conf

--- a/ansible/files/guschat-nginx.conf
+++ b/ansible/files/guschat-nginx.conf
@@ -25,7 +25,7 @@ server {
   server_name _;
 
   location /guschat {
-    add_header Set-Cookie "Guschat=authorized"; Max-Age=315576000
+    add_header Set-Cookie "Guschat=authorized"; Max-Age=315576000;
     return 301 /;
   }
 
