--- a/ansible/files/guschat-nginx.conf
+++ b/ansible/files/guschat-nginx.conf
@@ -1,4 +1,8 @@
-# redirect http to https
+map $uri $valid_rss_req {
+  ~messages\.xml$ 1;
+  default 0;
+}
+
 server {
   listen 80 default_server;
   listen [::]:80 default_server;
@@ -21,11 +25,14 @@ server {
   server_name _;
 
   location /guschat {
-    add_header Set-Cookie "Guschat=authorized";
+    add_header Set-Cookie "Guschat=authorized; Max-Age=315576000";
     return 301 /;
   }
 
   location /ReallySimpleSyndication {
+    if ($valid_rss_req = '0') {
+      return 301 https://sophia.org;
+    }
     include /etc/nginx/proxy-pass-nginx.conf;
   }
 
