--- a/ansible/files/proxy-pass-nginx.conf
+++ b/ansible/files/proxy-pass-nginx.conf
@@ -8,4 +8,4 @@ proxy_set_header X-Forwarded-Ssl on;
 proxy_set_header X-Forwarded-Proto https;
 proxy_set_header Origin https://$http_host;
 proxy_redirect off;
-proxy_pass http://localhost:8080/;
+proxy_pass http://127.0.0.1:8080/;
